--- a/gctmd_chapter.tex
+++ b/gctmd_chapter.tex
@@ -3,11 +3,13 @@
 
 In this chapter we discuss the impact of local charge on the global dynamics of the $\gamma$-Tubulin C-terminus (\gct{}). We begin from the facts that the \gct{} has been shown to be phosphorylated {\it in vivo}, and that mutating the phosphorylation site to mimic the electrostatic conditions of a constitutive phosphorylation show significant phenotypes on the mitotic spindle. We therefore hypothesize that phosphorylation at the \gct{} IDP is acting to regulate spindle dynamics via a structural mechanism.
 
-In order to measure how the addition of local negative charge in an acidic polypeptide affects the conformational sampling of the \gct{}, we simulated the dynamics of two isoforms of the \gct{} using MD. By comparing results from our simulations to experimental measurements performed with NMR spectroscopy on the \gct{}, we were able to propose that local changes in charge at specific residues in the polypeptide have the ability to bias the conformational sampling of the \gct{} in such a way that may be regulating the availability of binding surfaces on $\gamma$-Tubulin. Furthermore, we describe a novel mode of IDP function where functionality arises from transitions that lie entirely within disordered states.
+In order to measure how the addition of local negative charge in an acidic polypeptide affects the conformational sampling of the \gct{}, we simulated the dynamics of two isoforms of the \gct{} using MD. By comparing results from our simulations to experimental measurements performed with NMR spectroscopy on the \gct{}, we were able to propose that local changes in charge at specific residues in the polypeptide have the ability to bias the conformational sampling of the \gct{} in such a way that may be regulating the availability of binding surfaces on $\gamma$-Tubulin. Furthermore, we describe a novel mode of IDP function where functionality arises from switch-like transitions that lie entirely within disordered states.
 
 \section{NMR}
-Talk about NMR stuff here.
 
+Our starting point comes from NMR experiments done by collaborators in the Department of Chemistry at McGill on the WT and YD forms of the \gct{}. Through protein NMR spectroscopy we are able to obtain accurate measurements on the structural and dynamic properties of polypeptides. Among these are secondary structure state, dynamic conformational changes, and structural properties such as hydrodynamic radius, diffusion rates, and .. \todo{add more }etc. Given that the \gct{} is intrinsically disordered and therefore highly dynamic, this makes NMR a particularly suitable technique for this problem. Diffusion measurements show that both forms largely adopt collapsed conformations. \todo{get values} This is a surprising finding given the high percentage of negatively charged residues \todo{number} in both forms would be expected to promote open conformations. However, because that the \gct{} also has a high percentage of hydrophobic residues, \todo{how many} it is likely that there are other forces acting on the packing of the peptide such as the hydrophobic effect. Chemical shift secondary structure predictions show that both forms occupy a disordered random coil state and do not show evidence of adopting any secondary structure domains. Therefore, we do not observe any disorder-order transitions which are common in phosphorylated IDPS. However, relaxation-dispersion experiments which detect changes in the chemical environment of residues on the micro-millisecond timescale in the polypeptide show that the Y445D mutant undergoes large coordinated transitions between two structural states, while the WT dispersion profile is flat. From the NMR experiments we can conclude that the Aspartic Acid substitution induces collective motions on the micro-millisecond timescale which combined with the results from diffusion calculations is likely to correspond to a transient switching from a collapsed to an extended state. \todo{motivate MD}
+
+\todo{include flexible meccano plots}
 \section{Setting up the MD runs}
 
 Molecular Dynamics simulations (MDS) on WT and Y11D \gct{}s were carried out using MPI-enabled GROMACS 4.6.6 software\cite{hess2008gromacs} and a CentOS 5 high performance computational cluster. Calculations were distributed over 64 Dual Sandy Bridge 8-core, 2.6 GHz computing nodes and run under periodic boundary conditions with the OPLS-AA (Optimized Potential for Liquid Simulations ? All Atom) force field ~\cite{kaminski2001evaluation}.  The starting \gct{} polypeptide configurations were obtained from secondary and tertiary structure predictions by RaptorX \cite{kallberg2012template} and solvated using the SPCE (extended single point charge) water model in a dodecahedral box while enforcing a minimum distance between the edge of the box and solute of 1 nanometer. The total charge of the system was neutralized by adding sodium ions to the solution. Energy minimization was carried out using a steepest descent algorithm for a maximum of 50,000 steps until a maximum force of 100 kJ/mol between atoms was achieved. A 1 nm cut-off was used for non-bonded interactions, and long-range electrostatics were calculated using a Particle Mesh Edwald Sum algorithm. The systems equilibrated under the constant NVT and NPT ensembles (288K and 1 atm) for 5 ns before the production 2 $\mu$s simulations. Post-processing of all trajectories was done using the \texttt{trjconv} module of GROMACS. Theoretical random-coil structural ensembles (10,000 conformers) were calculated based on the \gct{} primary amino acid sequence using Flexible Meccano software \cite{ozenne2012flexible}. Translational diffusion coefficients were calculated for each structure using hydroNMR software \cite{de2000hydronmr}. 
