--- a/gctmd_chapter.tex
+++ b/gctmd_chapter.tex
@@ -25,9 +25,7 @@ We obtained atomic trajectories for the WT and YD forms of the \gct{} in full at
 
 {\it \gct{} does not adopt any stable secondary structure}
 
-The first question we addressed was whether the structures in our MD trajectories feature the same lack of global structure that was observed in NMR. We used the \texttt{dssp} algorithm \todo{cite} in VMD to compute secondary structure assignments on each residue in the chain. Assignments by \texttt{dssp} are based on computations of hydrogen bonding energies between all atoms. Since hydrogen bonds are the primary stabilizing interaction that gives rise to secondary structure, it then classifies the resulting conformations to a category of secondary structure motif. We apply this algorithm to every frame in the trajectories to assess secondary structure motifs as a function of simulation time \todo{fig ref}. Apart from some local helicity in the middle residues, secondary structure assignment plots for all four trajectories point to a consistent absence of global secondary structure motifs, as well as a predominance of coil and turn geometries which correspond to a largely unstructured ensemble. 
-
-
+The first question we addressed was whether the structures in our MD trajectories feature the same lack of global structure that was observed in NMR. We used the \texttt{dssp} algorithm \todo{cite} in VMD to compute secondary structure assignments on each residue in the chain. Assignments by \texttt{dssp} are based on computations of hydrogen bonding energies between all atoms. Since hydrogen bonds are the primary stabilizing interaction that gives rise to backbone secondary structure, \texttt{dssp} classifies geometries arising from potential hydrogen bonds to a category of secondary structure motif. We apply this algorithm to every frame in the trajectories to assess secondary structure motifs as a function of simulation time \todo{fig ref}. Apart from some local helicity in the middle residues, secondary structure assignment plots for all four trajectories point to a consistent absence of global secondary structure motif. The major classes of secondary structure present are turn and coil geometries which correspond to a largely unstructured ensemble. 
 
 \begin{figure}
 	\centering     %%% not \center
@@ -36,11 +34,25 @@ The first question we addressed was whether the structures in our MD trajectorie
 	\subfigure[WT Run 2]{\label{fig:a}\includegraphics[width=0.49\textwidth]{figures/wt_rep_ss.pdf}}
 	\subfigure[YD Run 2]{\label{fig:b}\includegraphics[width=0.49\textwidth]{figures/yd_rep_ss.pdf}}
 	\caption{Secondary structure assignments}
-\end{figure}
+\end{figure}	
 	
-	
-\todo{RMSD}
+{\it \gct{} is largely collapsed}
 
+We use radius of gyration and diffusion coefficient as quantitative measures of the compactness of the polypeptides. Given the lack of global secondary structure, ... NMR experiments report that...
+
+Translational diffusion coefficient measurements in NMR report that both \gct{} forms primarily occupy collapsed conformations. The global experimental average for the WT polypeptide obtained through NMR is \diffusion{}=\num{1.25e-6} $\pm$  \SI{1e-8}{\dcunits} which 
+
+Insert Rg/Dc figures and distributions.
+
+\begin{figure}
+	\includegraphics[height=0.8\textheight]{figures/gyr_run12.pdf}
+
+\end{figure}
+
+{\it Collective/correlated motions between collapsed and extended states}
+
+Despite there 
+\todo{talk about RMSD as motivation}
 
 \begin{figure}
 \centering
@@ -53,18 +65,6 @@ The first question we addressed was whether the structures in our MD trajectorie
 \includegraphics[height=0.6\textheight]{/Users/carlosgonzalez/Masters/Vogel-MD-Analysis/Figures/rmsd_window_10.pdf}
 \label{eigenvalues}
 \end{figure}
-	
-	
-{\it \gct{} is largely collapsed}
-
-Insert Rg/Dc figures and distributions.
-
-\begin{figure}
-	\includegraphics[height=0.8\textheight]{figures/gyr_run12.pdf}
-
-\end{figure}
-
-{\it Collective/correlated motions between collapsed and extended states}
 
 Insert PCA figures.
 
@@ -87,7 +87,7 @@ Insert PCA figures.
 \includegraphics[height=0.5\textheight]{figures/2d_scatter_yd.png}
 \end{figure}
 
- and computed the translational diffusion coefficient from the resulting MDS structural trajectories at 1 ns time steps \figref{dc}. We found that the diffusion coefficient (\diffusion) of the WT \gct{} remains relatively constant over the total simulation time (\diffusion = \num{1.237e-6} $\pm$ \SI{1.5816e-8}{\dcunits} and agrees well with the NMR-derived value (\diffusion=\num{1.25e-6} $\pm$  \SI{1e-8}{\dcunits}.  Similarly to what was seen by NMR, we find that the mean \diffusion of the Y11D \gct{} polypeptide is slightly lower than that of the WT \gct{} (\diffusion= \num{1.224e-6} $\pm$ \SI{3.503e-8}{\dcunits}). These results confirm that the \gct{}, while disordered, is more compact than a fully denatured polypeptide chain. Interestingly, between \num{762} to \SI{1255}{\ns} in the MDS, the Y11D \gct{} underwent transient excursions to less compact con-formations with significantly lower diffusion coefficients (mean \diffusion= \num{1.152e-6} $\pm$ \SI{2.0325e-8}{\dcunits}). This sub-population is more ex-tended (i.e. diffuses more slowly) than any conformation sampled by the WT \gct{} throughout the entire MDS. While the Y11D \gct{} extended states do not overlap with the conformational ensemble of the WT \gct{} polypeptides, they do, however, lie within the conformational space expected for a typical random-coil poly-peptide, as modeled by an ensemble of 10,000 disordered extended conformers (Fig. S8) derived from the \gct{} primary sequence using the \texttt{Flexible Meccano} tool.  
+ and computed the translational diffusion coefficient from the resulting MDS structural trajectories at 1 ns time steps \figref{dc}. We found that the diffusion coefficient (\diffusion) of the WT \gct{} remains relatively constant over the total simulation time (\diffusion = \num{1.237e-6} $\pm$ \SI{1.5816e-8}{\dcunits} and agrees well with the NMR-derived value (\diffusion=\num{1.25e-6} $\pm$  \SI{1e-8}{\dcunits}.  Similarly to what was seen by NMR, we find that the mean \diffusion of the Y11D \gct{} polypeptide is slightly lower than that of the WT \gct{} (\diffusion= \num{1.224e-6} $\pm$ \SI{3.503e-8}{\dcunits}). These results confirm that the \gct{}, while disordered, is more compact than a fully denatured polypeptide chain. Interestingly, between \num{762} to \SI{1255}{\ns} in the MDS, the Y11D \gct{} underwent transient excursions to less compact con-formations with significantly lower diffusion coefficients (mean \diffusion{}= \num{1.152e-6} $\pm$ \SI{2.0325e-8}{\dcunits}). This sub-population is more extended (i.e. diffuses more slowly) than any conformation sampled by the WT \gct{} throughout the entire MDS. While the Y11D \gct{} extended states do not overlap with the conformational ensemble of the WT \gct{} polypeptides, they do, however, lie within the conformational space expected for a typical random-coil poly-peptide, as modeled by an ensemble of 10,000 disordered extended conformers (Fig. S8) derived from the \gct{} primary sequence using the \texttt{Flexible Meccano} tool.  
 
 \begin{figure}
 \includegraphics{figures/Figure_7.png}
